aws/workspace/default-workspace/remote-backend/security_group.tf
# allow security group ssh traffic
resource "aws_security_group" "allow_ssh" {
  name        = "vpc-ssh-${terraform.workspace}"
  description = "Allow SSH"
  #vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    description = "Allow all Ip and ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

}

# allow security group web traffic
resource "aws_security_group" "allow_web" {
  name        = "vpc-web-${terraform.workspace}"
  description = "Allow web"
  #vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {
    description = "Allow port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  egress {
    description = "Allow all Ip and ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

}
